# wh04-3rd-3team-OptiMold

./: Main.py  Optimold.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  classified_scenarios.csv  classified_scenarios_002.csv  classified_scenarios_003.csv  classified_scenarios_004.csv  classified_scenarios_006.csv  classified_scenarios_007.csv  classified_scenarios_008.csv  classified_scenarios_011.csv  classified_scenarios_012.csv  feature_df_from_csv.csv  fifth_real_model.slxc  fourth_real_model.slxc  generate_binlabel_column.py  generate_input_params.py  input_params.py  prediction_module.py  pyproject.toml  third_real_model.slxc
dags/: generate_mat_b_dag.py
hmi_base/: xxInjectionMoldingActuationSystemHydroSchem_Retract.jpg:Zone.Identifier
resources/project/R6m7AxFfSX7StHtVJ9WG44h96GM/: FotUFeNt3hLqfyEEP-SwyihJMo4p.xml
resources/project/hLMKfvmMZYFbdoE4Xco7ryXas6s/: tX8cN6PqM0H6q29JgghcZjZe6rop.xml
resources/project/qaw0eS1zuuY1ar9TdPn1GMfrjbQ/: Sb0ZVdjFZheZzw0VOBroJUBgwEEp.xml
resources/project/root/: GiiBklLgTxteCEmomM8RCvWT0nQd.xml
slprj/sim/varcache/fifth_real_model/: checksumOfCache.mat  varInfo.mat
slprj/sim/varcache/fifth_real_model/tmwinternal/: simulink_cache.xml
slprj/sim/varcache/fourth_real_model/: checksumOfCache.mat  varInfo.mat
slprj/sim/varcache/fourth_real_model/tmwinternal/: simulink_cache.xml
slprj/sim/varcache/third_real_model/: checksumOfCache.mat  varInfo.mat
src/optimold/: generate_binlabel_column.py  generate_physical_b_mat.py  generate_physical_mat.py
(+1 files in other folders)
