[project]
name = "wh04-3rd-3team-OptiMold"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "wminhyuk", email = "seoseo1998@gmail.com"},
]
dependencies = ["numpy>=2.2.6", "scipy>=1.15.3", "jupyterlab>=4.4.3", "pandas>=2.2.3", "matplotlib>=3.10.3", "seaborn>=0.13.2", "statsmodels>=0.14.4"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
